Restructured Prover and lexical entries: semantic side of a premise can now be any String (class MeaningRepresentation). The semantics side is now depending only on three interfaces, one for all semantic classes, one for functional application-type classes and one for functional abstraction-type classes. The compilation process still uses FuncApp and SemanticFunction from the lambda package for now.